# dnsup

./: .dnsup.toml  Cargo.toml  Dockerfile  LICENSE  README.md  dnsup.sample.toml
src/: main.rs  util.rs
src/api/: cloudflare.rs
src/http/: cloudflare.http
src/lookup/: dig.rs  mod.rs  opendns.rs
